исправляет ошибки по w3c

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
   </head>
   <body>
     <header class="header">
       <a href="" class="logo-link">
-        <img src="#" alt="Логотип Седона" class="logo-img" />
+        <img src="#" alt="Логотип Седона" class="logo-img">
       </a>
       <nav class="main-menu">
         <ul class="main-menu_list">
@@ -24,7 +24,6 @@
           </li>
         </ul>
       </nav>
-      <section class="welcome"></section>
       <ul class="user-menu">
         <li class="user-menu_item">
           <a href="#" class="user-menu_link">
@@ -46,7 +45,7 @@
       <h1 class="visually-hidden">Седона</h1>
       <section class="welcome">
         <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
-        <img src="" alt="welcome to the gorgerous Sedona" />
+        <img src="#" alt="welcome to the gorgerous Sedona">
       </section>
       <section class="advantages">
         <div class="advantages-title">
@@ -61,7 +60,7 @@
             <p class="advantages-description">
               Седона — не аттракцион для туристов, там течёт своя жизнь
             </p>
-            <img class="advantages-image" src="#" alt="Седона" />
+            <img class="advantages-image" src="#" alt="Седона">
           </li>
           <li class="advantages-item">
             <h3 class="advantages-header">Небольшая площадь</h3>
@@ -82,7 +81,7 @@
             </p>
           </li>
           <li class="advantages-item">
-            <img class="advantages-image" src="#" alt="Мост дьявола" />
+            <img class="advantages-image" src="#" alt="Мост дьявола">
             <h3 class="advantages-header">Там есть мост дьявола</h3>
             <p class="advantages-description">
               Да, по нему можно пройти! Если вы осмелитесь, разумеется
@@ -143,7 +142,7 @@
           id="email"
           name="email"
           placeholder="Ваш e-mail"
-        />
+        >
         <button class="subscribe-btn" type="submit">Подписаться</button>
       </form>
       <div class="contacts">
@@ -168,7 +167,7 @@
           <a href="tel:+78128121212">+7 (812) 812-12-12</a>
         </div>
         <a class="#" href="https://htmlacademy.ru/">
-          <img src="#" alt="HTML Academy" />
+          <img src="#" alt="HTML Academy">
         </a>
       </div>
     </footer>
