--- a/index.html
+++ b/index.html
@@ -1,175 +1,168 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
-    <header class="header">
-      <a href="" class="logo-link">
-        <img src="#" alt="Логотип Седона" class="logo-img">
-      </a>
-      <nav class="main-menu">
-        <ul class="main-menu_list">
-          <li class="main-menu_item">
-            <a href="#" class="main-menu_link main-menu_link--active">
-              Главная
-            </a>
-          </li>
-          <li class="main-menu_item">
-            <a href="#" class="main-menu_link">О Седоне</a>
-          </li>
-          <li class="main-menu_item">
-            <a href="#" class="main-menu_link">Гостиницы</a>
-          </li>
-        </ul>
-      </nav>
-      <ul class="user-menu">
-        <li class="user-menu_item">
-          <a href="#" class="user-menu_link">
-            <span class="visually-hidden">Поиск по сайту</span>
+
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+</head>
+
+<body>
+  <header class="page-header">
+    <a class="logo-link">
+      <img src="./images/logo.svg" width="170" height="70" alt="Логотип Седона" class="logo-img">
+    </a>
+    <nav class="navigation">
+      <ul class="navigation-list">
+        <li class="navigation-item">
+          <a href="#" class="navigation-link navigation-link--active">
+            Главная
           </a>
         </li>
-        <li class="user-menu_item">
-          <a href="#" class="user-menu_link">
-            <span class="visually-hidden">Поиск по сайту</span>
-            <span class="fav-number">12</span>
-          </a>
+        <li class="navigation-item">
+          <a href="#" class="navigation-link">О Седоне</a>
         </li>
-        <li class="user-menu_item">
-          <a href="#" class="user-menu_link">Поиск по сайту</a>
+        <li class="navigation-item">
+          <a href="#" class="navigation-link">Гостиницы</a>
         </li>
       </ul>
-    </header>
-    <main class="main">
-      <h1 class="visually-hidden">Седона</h1>
-      <section class="welcome">
-        <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
-        <img src="#" alt="welcome to the gorgerous Sedona">
-      </section>
-      <section class="advantages">
-        <div class="advantages-title">
-          Сeдона — небольшой городок в Аризоне, заслуживающий большего!
-        </div>
-        <p class="advantages-subtitle">
-          Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
-        </p>
-        <ul class="advantages-list">
-          <li class="advantages-item">
-            <h3 class="advantages-header">Настоящий городок</h3>
-            <p class="advantages-description">
-              Седона — не аттракцион для туристов, там течёт своя жизнь
-            </p>
-            <img class="advantages-image" src="#" alt="Седона">
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-header">Небольшая площадь</h3>
-            <p class="advantages-description">
-              Все достопримечательности находятся очень близко
-            </p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-header">Красивая дорога</h3>
-            <p class="advantages-description">
-              Ехать в Седону из Лас-Вегаса совсем не скучно!
-            </p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-header">Мало туристов</h3>
-            <p class="advantages-description">
-              Большинство едет в Гранд Каньон и толпится там
-            </p>
-          </li>
-          <li class="advantages-item">
-            <img class="advantages-image" src="#" alt="Мост дьявола">
-            <h3 class="advantages-header">Там есть мост дьявола</h3>
-            <p class="advantages-description">
-              Да, по нему можно пройти! Если вы осмелитесь, разумеется
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section class="services">
-        <div class="services-title">
-          Приезжайте в Седону отдохнуть в комфорте и уюте!
-        </div>
-        <p class="services-subtitle">
-          Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
-        </p>
-        <ul class="services-list">
-          <li class="services-item">
-            <h3 class="services-caption">Жильё</h3>
-            <p class="services-text">
-              Седона — не аттракцион для туристов, там течёт своя жизнь
-            </p>
-          </li>
-          <li class="services-item">
-            <h3 class="services-caption">Еда</h3>
-            <p class="services-text">
-              Все достопримечательности находятся очень близко
-            </p>
-          </li>
-          <li class="services-item">
-            <h3 class="services-caption">Сувениры</h3>
-            <p class="services-text">
-              Ехать в Седону из Лас-Вегаса совсем не скучно!
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section class="search-hotel">
-        <h3 class="search-title">Заинтересовались?</h3>
-        <p class="search-desription">
-          Укажите предполагаемые даты поездки,и мы покажем вам лучшие
-          предложения гостиниц в Седоне
-        </p>
-        <a href="#" class="search-button">Поиск гостиницы в Cедоне</a>
-      </section>
-    </main>
-    <footer class="footer">
-      <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
-      <p class="subscribe-subtitle">
-        Только полезная информация и никакого спама, честное бойскаутское!
-      </p>
-      <form
-        class="subscribe-form"
-        action="https://echo.htmlacademy.ru/"
-        method="post"
-      >
-        <input
-          class="subscribe-input"
-          type="email"
-          id="email"
-          name="email"
-          placeholder="Ваш e-mail"
-        >
-        <button class="subscribe-btn" type="submit">Подписаться</button>
-      </form>
-      <div class="contacts">
-        <ul class="contacts-list">
-          <li class="contacts-item">
-            <a href="https://vk.com/htmlacademy" class="contacts-link">
-              <span class="visually-hidden">Мы в ВК</span>
-            </a>
-          </li>
-          <li class="contacts-item">
-            <a href="#" class="contacts-link">
-              <span class="visually-hidden">Мы в ТГ</span>
-            </a>
-          </li>
-          <li class="contacts-item">
-            <a href="#" class="contacts-link">
-              <span class="visually-hidden">Мы в Youtube</span>
-            </a>
-          </li>
-        </ul>
-        <div>
-          <a href="tel:+78128121212">+7 (812) 812-12-12</a>
-        </div>
-        <a class="#" href="https://htmlacademy.ru/">
-          <img src="#" alt="HTML Academy">
+    </nav>
+    <ul class="user-menu">
+      <li class="user-menu-item">
+        <a href="#" class="user-menu-link search-field">
+          <span class="visually-hidden">Поиск по сайту</span>
         </a>
+      </li>
+      <li class="user-menu-item">
+        <a href="#" class="user-menu-link like-btn">
+          <span class="visually-hidden">Понравилось</span>
+          <span class="fav-number">12</span>
+        </a>
+      </li>
+      <li class="user-menu-item">
+        <a href="#" class="user-menu-link ">Хочу сюда</a>
+      </li>
+    </ul>
+  </header>
+  <main class="main">
+    <h1 class="visually-hidden">Седона</h1>
+    <section class="welcome">
+      <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
+      <img src="#" alt="welcome to the gorgerous Sedona">
+    </section>
+    <section class="advantages">
+      <div class="advantages-title">
+        Сeдона — небольшой городок в Аризоне, заслуживающий большего!
       </div>
-    </footer>
-  </body>
+      <p class="advantages-subtitle">
+        Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
+      </p>
+      <ul class="advantages-list">
+        <li class="advantages-item">
+          <h3 class="advantages-header">Настоящий городок</h3>
+          <p class="advantages-description">
+            Седона — не аттракцион для туристов, там течёт своя жизнь
+          </p>
+          <img class="advantages-image" src="#" alt="Седона">
+        </li>
+        <li class="advantages-item">
+          <h3 class="advantages-header">Небольшая площадь</h3>
+          <p class="advantages-description">
+            Все достопримечательности находятся очень близко
+          </p>
+        </li>
+        <li class="advantages-item">
+          <h3 class="advantages-header">Красивая дорога</h3>
+          <p class="advantages-description">
+            Ехать в Седону из Лас-Вегаса совсем не скучно!
+          </p>
+        </li>
+        <li class="advantages-item">
+          <h3 class="advantages-header">Мало туристов</h3>
+          <p class="advantages-description">
+            Большинство едет в Гранд Каньон и толпится там
+          </p>
+        </li>
+        <li class="advantages-item">
+          <img class="advantages-image" src="#" alt="Мост дьявола">
+          <h3 class="advantages-header">Там есть мост дьявола</h3>
+          <p class="advantages-description">
+            Да, по нему можно пройти! Если вы осмелитесь, разумеется
+          </p>
+        </li>
+      </ul>
+    </section>
+    <section class="services">
+      <div class="services-title">
+        Приезжайте в Седону отдохнуть в комфорте и уюте!
+      </div>
+      <p class="services-subtitle">
+        Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
+      </p>
+      <ul class="services-list">
+        <li class="services-item">
+          <h3 class="services-caption">Жильё</h3>
+          <p class="services-text">
+            Седона — не аттракцион для туристов, там течёт своя жизнь
+          </p>
+        </li>
+        <li class="services-item">
+          <h3 class="services-caption">Еда</h3>
+          <p class="services-text">
+            Все достопримечательности находятся очень близко
+          </p>
+        </li>
+        <li class="services-item">
+          <h3 class="services-caption">Сувениры</h3>
+          <p class="services-text">
+            Ехать в Седону из Лас-Вегаса совсем не скучно!
+          </p>
+        </li>
+      </ul>
+    </section>
+    <section class="search-hotel">
+      <h3 class="search-title">Заинтересовались?</h3>
+      <p class="search-desription">
+        Укажите предполагаемые даты поездки,и мы покажем вам лучшие
+        предложения гостиниц в Седоне
+      </p>
+      <a href="#" class="search-button">Поиск гостиницы в Cедоне</a>
+    </section>
+  </main>
+  <footer class="footer">
+    <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+    <p class="subscribe-subtitle">
+      Только полезная информация и никакого спама, честное бойскаутское!
+    </p>
+    <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+      <input class="subscribe-input" type="email" id="email" name="email" placeholder="Ваш e-mail">
+      <button class="subscribe-btn" type="submit">Подписаться</button>
+    </form>
+    <div class="contacts">
+      <ul class="contacts-list">
+        <li class="contacts-item">
+          <a href="https://vk.com/htmlacademy" class="contacts-link">
+            <span class="visually-hidden">Мы в ВК</span>
+          </a>
+        </li>
+        <li class="contacts-item">
+          <a href="https://t.me/htmlacademy" class="contacts-link">
+            <span class="visually-hidden">Мы в ТГ</span>
+          </a>
+        </li>
+        <li class="contacts-item">
+          <a href="https://www.youtube.com/user/htmlacademyru" class="contacts-link">
+            <span class="visually-hidden">Мы в Youtube</span>
+          </a>
+        </li>
+      </ul>
+      <div>
+        <a href="tel:+78128121212">+7 (812) 812-12-12</a>
+      </div>
+      <a class="footer-logo" href="https://htmlacademy.ru/">
+        <img src="#" alt="HTML Academy">
+      </a>
+    </div>
+  </footer>
+</body>
+
 </html>
