--- a/index.html
+++ b/index.html
@@ -1,168 +1,170 @@
 <!DOCTYPE html>
 <html lang="ru">
 
-<head>
-  <meta charset="utf-8">
-  <title>HTML Academy: Седона</title>
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>HTML Academy: Седона</title>
+  </head>
 
-<body>
-  <header class="page-header">
-    <a class="logo-link">
-      <img src="./images/logo.svg" width="170" height="70" alt="Логотип Седона" class="logo-img">
-    </a>
-    <nav class="navigation">
-      <ul class="navigation-list">
-        <li class="navigation-item">
-          <a href="#" class="navigation-link navigation-link--active">
-            Главная
-          </a>
-        </li>
-        <li class="navigation-item">
-          <a href="#" class="navigation-link">О Седоне</a>
-        </li>
-        <li class="navigation-item">
-          <a href="#" class="navigation-link">Гостиницы</a>
-        </li>
-      </ul>
-    </nav>
-    <ul class="user-menu">
-      <li class="user-menu-item">
-        <a href="#" class="user-menu-link search-field">
-          <span class="visually-hidden">Поиск по сайту</span>
-        </a>
-      </li>
-      <li class="user-menu-item">
-        <a href="#" class="user-menu-link like-btn">
-          <span class="visually-hidden">Понравилось</span>
-          <span class="fav-number">12</span>
-        </a>
-      </li>
-      <li class="user-menu-item">
-        <a href="#" class="user-menu-link ">Хочу сюда</a>
-      </li>
-    </ul>
-  </header>
-  <main class="main">
-    <h1 class="visually-hidden">Седона</h1>
-    <section class="welcome">
-      <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
-      <img src="#" alt="welcome to the gorgerous Sedona">
-    </section>
-    <section class="advantages">
-      <div class="advantages-title">
-        Сeдона — небольшой городок в Аризоне, заслуживающий большего!
-      </div>
-      <p class="advantages-subtitle">
-        Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
-      </p>
-      <ul class="advantages-list">
-        <li class="advantages-item">
-          <h3 class="advantages-header">Настоящий городок</h3>
-          <p class="advantages-description">
-            Седона — не аттракцион для туристов, там течёт своя жизнь
+  <body>
+    <header class="page-header" data-test="header">
+      <a class="logo-link">
+        <img class="logo-img" src="./images/logo.svg" width="170" height="70" alt="Логотип Седона">
+      </a>
+      <nav class="navigation">
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a href="#" class="navigation-link navigation-link-active">
+              Главная
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">О Седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Гостиницы</a>
+          </li>
+        </ul>
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-user-item">
+            <a class="navigation-user-link navigation-user-link-search" href="#">
+              <span class="visually-hidden">Поиск по сайту</span>
+            </a>
+          </li>
+          <li class="navigation-user-item">
+            <a class="navigation-user-link navigation-user-link-favorite" href="#">
+              <span class="visually-hidden">Понравилось</span>
+              <span class="notification-badge">12</span>
+            </a>
+          </li>
+          <li class="navigation-user-item">
+            <a class="navigation-user-link button" href="#">Хочу сюда</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main class="main-index" data-test="main">
+      <h1 class="visually-hidden">Сайт города Седона</h1>
+      <section class="welcome" data-test="hero">
+        <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
+        <img class="welcome-img" src="#" alt="Добро пожаловать в Седону">
+      </section>
+      <section class="advantages" data-test="advantages">
+        <h2 class="advantages-title">
+          Сeдона — небольшой городок в Аризоне, заслуживающий большего!
+        </h2>
+        <p class="advantages-subtitle">
+          Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
+        </p>
+        <ul class="advantages-list">
+          <li class="advantages-item">
+            <h3 class="advantages-header">Настоящий городок</h3>
+            <p class="advantages-description">
+              Седона — не аттракцион для туристов, там течёт своя жизнь
+            </p>
+            <img class="advantages-image" src="#" alt="Седона">
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-header">Небольшая площадь</h3>
+            <p class="advantages-description">
+              Все достопримечательности находятся очень близко
+            </p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-header">Красивая дорога</h3>
+            <p class="advantages-description">
+              Ехать в Седону из Лас-Вегаса совсем не скучно!
+            </p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-header">Мало туристов</h3>
+            <p class="advantages-description">
+              Большинство едет в Гранд Каньон и толпится там
+            </p>
+          </li>
+          <li class="advantages-item">
+            <img class="advantages-image" src="#" alt="Мост дьявола">
+            <h3 class="advantages-header">Там есть мост дьявола</h3>
+            <p class="advantages-description">
+              Да, по нему можно пройти! Если вы осмелитесь, разумеется
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="services">
+        <h2 class="services-title">
+          Приезжайте в Седону отдохнуть в комфорте и уюте!
+        </h2>
+        <p class="services-subtitle">
+          Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
+        </p>
+        <ul class="services-list">
+          <li class="services-item">
+            <h3 class="services-caption">Жильё</h3>
+            <p class="services-text">
+              Седона — не аттракцион для туристов, там течёт своя жизнь
+            </p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-caption">Еда</h3>
+            <p class="services-text">
+              Все достопримечательности находятся очень близко
+            </p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-caption">Сувениры</h3>
+            <p class="services-text">
+              Ехать в Седону из Лас-Вегаса совсем не скучно!
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="search-hotel" data-test="search">
+        <h3 class="search-title">Заинтересовались?</h3>
+        <p class="search-desription">
+          Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне
+        </p>
+        <a href="#" class="button search-button">Поиск гостиницы в Cедоне</a>
+      </section>
+      <section class="subscribe" data-test="subscribe">
+        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+        <p class="subscribe-subtitle">
+          Только полезная информация и никакого спама, честное бойскаутское!
+        </p>
+        <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+          <p class="subscribe-form-name">
+            <label class="visually-hidden" for="user-email">Ваш e-mail</label>
+            <input class="subscribe-input" type="email" name="user-email" id="user-email" placeholder="Ваш e-mail" required>
           </p>
-          <img class="advantages-image" src="#" alt="Седона">
-        </li>
-        <li class="advantages-item">
-          <h3 class="advantages-header">Небольшая площадь</h3>
-          <p class="advantages-description">
-            Все достопримечательности находятся очень близко
-          </p>
-        </li>
-        <li class="advantages-item">
-          <h3 class="advantages-header">Красивая дорога</h3>
-          <p class="advantages-description">
-            Ехать в Седону из Лас-Вегаса совсем не скучно!
-          </p>
-        </li>
-        <li class="advantages-item">
-          <h3 class="advantages-header">Мало туристов</h3>
-          <p class="advantages-description">
-            Большинство едет в Гранд Каньон и толпится там
-          </p>
-        </li>
-        <li class="advantages-item">
-          <img class="advantages-image" src="#" alt="Мост дьявола">
-          <h3 class="advantages-header">Там есть мост дьявола</h3>
-          <p class="advantages-description">
-            Да, по нему можно пройти! Если вы осмелитесь, разумеется
-          </p>
-        </li>
-      </ul>
-    </section>
-    <section class="services">
-      <div class="services-title">
-        Приезжайте в Седону отдохнуть в комфорте и уюте!
-      </div>
-      <p class="services-subtitle">
-        Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
-      </p>
-      <ul class="services-list">
-        <li class="services-item">
-          <h3 class="services-caption">Жильё</h3>
-          <p class="services-text">
-            Седона — не аттракцион для туристов, там течёт своя жизнь
-          </p>
-        </li>
-        <li class="services-item">
-          <h3 class="services-caption">Еда</h3>
-          <p class="services-text">
-            Все достопримечательности находятся очень близко
-          </p>
-        </li>
-        <li class="services-item">
-          <h3 class="services-caption">Сувениры</h3>
-          <p class="services-text">
-            Ехать в Седону из Лас-Вегаса совсем не скучно!
-          </p>
-        </li>
-      </ul>
-    </section>
-    <section class="search-hotel">
-      <h3 class="search-title">Заинтересовались?</h3>
-      <p class="search-desription">
-        Укажите предполагаемые даты поездки,и мы покажем вам лучшие
-        предложения гостиниц в Седоне
-      </p>
-      <a href="#" class="search-button">Поиск гостиницы в Cедоне</a>
-    </section>
-  </main>
-  <footer class="footer">
-    <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
-    <p class="subscribe-subtitle">
-      Только полезная информация и никакого спама, честное бойскаутское!
-    </p>
-    <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
-      <input class="subscribe-input" type="email" id="email" name="email" placeholder="Ваш e-mail">
-      <button class="subscribe-btn" type="submit">Подписаться</button>
-    </form>
-    <div class="contacts">
-      <ul class="contacts-list">
-        <li class="contacts-item">
-          <a href="https://vk.com/htmlacademy" class="contacts-link">
+          <button class="button subscribe-button" type="submit">Подписаться</button>
+
+        </form>
+      </section>
+    </main>
+    <footer class="page-footer" data-test="footer">
+
+      <ul class="footer-social-list">
+        <li class="footer-social-item">
+          <a class="footer-social-link" href="https://vk.com/htmlacademy">
             <span class="visually-hidden">Мы в ВК</span>
           </a>
         </li>
-        <li class="contacts-item">
-          <a href="https://t.me/htmlacademy" class="contacts-link">
+        <li class="footer-social-item">
+          <a class="footer-social-link" href="https://t.me/htmlacademy">
             <span class="visually-hidden">Мы в ТГ</span>
           </a>
         </li>
-        <li class="contacts-item">
-          <a href="https://www.youtube.com/user/htmlacademyru" class="contacts-link">
+        <li class="footer-social-item">
+          <a class="footer-social-link" href="https://www.youtube.com/user/htmlacademyru">
             <span class="visually-hidden">Мы в Youtube</span>
           </a>
         </li>
       </ul>
-      <div>
-        <a href="tel:+78128121212">+7 (812) 812-12-12</a>
-      </div>
-      <a class="footer-logo" href="https://htmlacademy.ru/">
-        <img src="#" alt="HTML Academy">
+      <a class="footer-contacts-link" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      <a class="copyright" href="https://htmlacademy.ru/">
+        <img class="htmlacademy-logo" src="#" alt="Логотип HTML Academy">
       </a>
-    </div>
-  </footer>
-</body>
+    </footer>
+  </body>
 
 </html>
