--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
       <h1 class="visually-hidden">Сайт города Седона</h1>
       <section class="welcome" data-test="hero">
         <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
-        <img class="welcome-img" width="458" height="352" src="./images/welcome-img.svg" alt="Добро пожаловать в Седону">
+        <img class="welcome-img" width="458" height="352" src="./images/welcome-img.svg"
+          alt="Добро пожаловать в Седону">
       </section>
       <section class="advantages" data-test="advantages">
         <h2 class="advantages-title">Сeдона — небольшой городок в Аризоне, заслуживающий большего!</h2>
@@ -54,7 +55,8 @@
           <li class="advantages-item">
             <h3 class="advantages-header">Настоящий городок</h3>
             <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img class="advantages-image" width="800" height="385" src="./images/advantages_city_sedona.svg" alt="Виды города Седона">
+            <img class="advantages-image" width="800" height="385" src="./images/advantages_city_sedona.jpg"
+              alt="Виды города Седона">
           </li>
           <li class="advantages-item">
             <h3 class="advantages-header">Небольшая площадь</h3>
@@ -69,7 +71,7 @@
             <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
           <li class="advantages-item">
-            <img class="advantages-image" width="800" height="385" src="./images/devil_bridge.svg" alt="Мост дьявола">
+            <img class="advantages-image" width="800" height="385" src="./images/devil_bridge.jpg" alt="Мост дьявола">
             <h3 class="advantages-header">Там есть мост дьявола</h3>
             <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </li>
@@ -95,7 +97,8 @@
       </section>
       <section class="search-hotel" data-test="search">
         <h2 class="search-title">Заинтересовались?</h3>
-          <p class="search-desription">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <p class="search-desription">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц
+            в Седоне</p>
           <a href="#" class="button search-button">Поиск гостиницы в Cедоне</a>
       </section>
       <section class="subscribe" data-test="subscribe">
@@ -130,7 +133,8 @@
       </ul>
       <a class="contacts-link" href="tel:+78128121212">+7 (812) 812-12-12</a>
       <a class="copyright" href="https://htmlacademy.ru/">
-        <img class="htmlacademy-logo" width="115" height="33" src="./images/logo_htmlacademy.svg" alt="Логотип HTML Academy">
+        <img class="htmlacademy-logo" width="115" height="33" src="./images/logo_htmlacademy.svg"
+          alt="Логотип HTML Academy">
       </a>
     </footer>
   </body>
