--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
       <h1 class="visually-hidden">Сайт города Седона</h1>
       <section class="welcome" data-test="hero">
         <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
-        <img class="welcome-img" width="458" height="352" src="./images/welcome-img.svg"
-          alt="Добро пожаловать в Седону">
+        <img class="welcome-img" width="458" height="352" src="./images/welcome-img.svg" alt="Добро пожаловать в Седону">
       </section>
       <section class="advantages" data-test="advantages">
         <h2 class="advantages-title">Сeдона — небольшой городок в Аризоне, заслуживающий большего!</h2>
@@ -55,8 +54,7 @@
           <li class="advantages-item">
             <h3 class="advantages-header">Настоящий городок</h3>
             <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img class="advantages-image" width="800" height="385" src="./images/advantages_city_sedona.jpg"
-              alt="Виды города Седона">
+            <img class="advantages-image" width="800" height="385" src="./images/advantages_city_sedona.jpg" alt="Виды города Седона">
           </li>
           <li class="advantages-item">
             <h3 class="advantages-header">Небольшая площадь</h3>
@@ -97,8 +95,7 @@
       </section>
       <section class="search-hotel" data-test="search">
         <h2 class="search-title">Заинтересовались?</h3>
-          <p class="search-desription">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц
-            в Седоне</p>
+          <p class="search-desription">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
           <a href="#" class="button search-button">Поиск гостиницы в Cедоне</a>
       </section>
       <section class="subscribe" data-test="subscribe">
