--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
 
   <body>
     <header class="page-header" data-test="header">
       <a class="logo-link">
-        <img class="logo-img" src="./images/logo.svg" width="170" height="70" alt="Логотип сайта Седона">
+        <img class="logo-image" src="./images/logo.svg" width="170" height="70" alt="Логотип сайта Седона">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
@@ -23,20 +25,20 @@
             <a class="navigation-link" href="#">Гостиницы</a>
           </li>
         </ul>
-        <ul class="navigation-list navigation-user">
-          <li class="navigation-user-item">
-            <a class="navigation-user-link navigation-user-link-search" href="#">
+        <ul class="navigation-list user-menu">
+          <li class="user-menu-item">
+            <a class="user-menu-link user-menu-search" href="#">
               <span class="visually-hidden">Поиск по сайту</span>
             </a>
           </li>
-          <li class="navigation-user-item">
-            <a class="navigation-user-link navigation-user-link-favorite" href="#">
+          <li class="user-menu-item user-menu-favorite">
+            <a class="user-menu-link" href="#">
               <span class="visually-hidden">Понравилось</span>
               <span class="notification-badge">12</span>
             </a>
           </li>
-          <li class="navigation-user-item">
-            <a class="navigation-user-link button" href="#">Хочу сюда</a>
+          <li class="user-menu-item">
+            <a class="button user-menu-button" href="#">Хочу сюда</a>
           </li>
         </ul>
       </nav>
@@ -45,31 +47,33 @@
       <h1 class="visually-hidden">Сайт города Седона</h1>
       <section class="welcome" data-test="hero">
         <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
-        <img class="welcome-img" width="458" height="352" src="./images/welcome-img.svg" alt="Добро пожаловать в Седону">
+        <img class="welcome-image" width="458" height="352" src="./images/welcome-image.svg"
+          alt="Добро пожаловать в Седону">
       </section>
       <section class="advantages" data-test="advantages">
         <h2 class="advantages-title">Сeдона — небольшой городок в Аризоне, заслуживающий большего!</h2>
         <p class="advantages-subtitle">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <ul class="advantages-list">
-          <li class="advantages-item">
+          <li class="advantages-item advantages-item-dark">
             <h3 class="advantages-header">Настоящий городок</h3>
             <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img class="advantages-image" width="800" height="385" src="./images/advantages_city_sedona.jpg" alt="Виды города Седона">
+            <img class="advantages-image" width="800" height="385" src="./images/advantages-city-sedona.jpg"
+              alt="Виды города Седона">
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item advantages-item-light">
             <h3 class="advantages-header">Небольшая площадь</h3>
             <p class="advantages-description">Все достопримечательности находятся очень близко</p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item advantages-item-medium">
             <h3 class="advantages-header">Красивая дорога</h3>
             <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item advantages-item-light">
             <h3 class="advantages-header">Мало туристов</h3>
             <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
-          <li class="advantages-item">
-            <img class="advantages-image" width="800" height="385" src="./images/devil_bridge.jpg" alt="Мост дьявола">
+          <li class="advantages-item advantages-item-dark">
+            <img class="advantages-image" width="800" height="385" src="./images/devil-bridge.jpg" alt="Мост дьявола">
             <h3 class="advantages-header">Там есть мост дьявола</h3>
             <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </li>
@@ -95,9 +99,12 @@
       </section>
       <section class="search-hotel" data-test="search">
         <h2 class="search-title">Заинтересовались?</h3>
-          <p class="search-desription">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <p class="search-desription">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц
+            в Седоне</p>
           <a href="#" class="button search-button">Поиск гостиницы в Cедоне</a>
       </section>
+    </main>
+    <footer class="page-footer" data-test="footer">
       <section class="subscribe" data-test="subscribe">
         <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
         <p class="subscribe-subtitle">Только полезная информация и никакого спама, честное бойскаутское!</p>
@@ -109,8 +116,7 @@
           <button class="button subscribe-button" type="submit">Подписаться</button>
         </form>
       </section>
-    </main>
-    <footer class="page-footer" data-test="footer">
+      <section class="socials">
       <ul class="social-list">
         <li class="social-item">
           <a class="social-link" href="https://vk.com/htmlacademy">
@@ -128,11 +134,16 @@
           </a>
         </li>
       </ul>
+      </section>
+      <section class="contacts">
       <a class="contacts-link" href="tel:+78128121212">+7 (812) 812-12-12</a>
-      <a class="copyright" href="https://htmlacademy.ru/">
-        <img class="htmlacademy-logo" width="115" height="33" src="./images/logo_htmlacademy.svg"
+      </section>
+      <section class="copyright">
+      <a class="copyright-link" href="https://htmlacademy.ru/">
+        <img class="htmlacademy-logo" width="115" height="33" src="./images/logo-htmlacademy.svg"
           alt="Логотип HTML Academy">
       </a>
+      </section>
     </footer>
   </body>
 
