--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
-              <a class="navigation-link navigation-link-active" href="./index.html" aria-current="page">Главная</a>
+              <a class="navigation-link navigation-link-current" href="./index.html" aria-current="page">Главная</a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="#">О Седоне</a>
@@ -38,16 +38,16 @@
               </a>
             </li>
             <li class="user-menu-item">
-              <a class="button user-menu-button" href="#">Хочу сюда</a>
+              <a class="button user-menu-button" href="#">Хочу сюда!</a>
             </li>
           </ul>
         </nav>
       </header>
       <main class="main-container main-index" data-test="main">
         <h1 class="visually-hidden">Сайт города Седона</h1>
-        <section class="welcome" data-test="hero">
+        <section class="hero" data-test="hero">
           <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
-          <img class="welcome-image" width="458" height="352" src="./images/welcome-image.svg"
+          <img class="hero-image" width="458" height="352" src="./images/welcome-image.svg"
             alt="Добро пожаловать в Седону">
         </section>
         <section class="advantages" data-test="advantages">
@@ -78,7 +78,6 @@
               <img class="advantages-image" width="800" height="385" src="./images/devil-bridge.jpg" alt="Мост дьявола">
               <div class="advantages-container">
                 <h3 class="advantages-header">Там есть мост дьявола</h3>
-
                 <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
               </div>
             </li>
@@ -104,7 +103,7 @@
         </section>
         <section class="search-hotel" data-test="search">
           <h2 class="search-title">Заинтересовались?</h3>
-            <p class="search-desription">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения
+            <p class="search-desription">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения
               гостиниц
               в Седоне</p>
             <a href="#" class="button search-button">Поиск гостиницы в Cедоне</a>
