Добавляет стилизацию фильтра цен

--- a/catalog.html
+++ b/catalog.html
@@ -134,12 +134,14 @@
               <fieldset class="hotel-filter-group price-filter">
                 <legend class="hotel-filter-title">Стоимость, ₽:</legend>
                 <div class="range-wrapper-inputs">
-                  <label class="control-range-label visually-hidden" for="range-min">От</label>
+                  <label class="control-range-label" for="range-min">
                   <input type="number" class="control-input-range" id="range-min" value="0" min="0" max="9000"
                     name="min-price">
-                  <label class="control-range-label visually-hidden" for="range-max">До</label>
+                  </label>
+                  <label class="control-range-label" for="range-max">
                   <input type="number" class="control-input-range" id="range-max" value="9000" min="0" max="9000"
                     name="max-price">
+                  </label>
                 </div>
                 <div class="range-scale">
                   <div class="range-bar" style="width: 226px; left: 0;">
