--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона. Каталог гостиниц</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
   </head>
 
   <body>
