--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           </section>
         </div>
       </footer>
-      <div class="modal-container">
+      <div class="modal-container modal-container-none">
         <div class="modal modal-search-hotel">
           <button class="modal-close-button">
             <span class="visually-hidden">Закрыть</span>
