--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона. Каталог гостиниц</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./images/favicon.ico">
   </head>
 
   <body>
@@ -77,7 +77,7 @@
             <h2 class="visually-hidden">Фильтр поиска гостиниц</h2>
             <form class="hotel-filter-form" action="https://echo.htmlacademy.ru/" method="get">
               <fieldset class="hotel-filter-group">
-                <legend class="hotel-filter-title">Инфраструктура</legend>
+                <legend class="hotel-filter-title">Инфраструктура:</legend>
                 <ul class="hotel-filter-list">
                   <li class="hotel-filter-item">
                     <label class="control" for="swimming-pool">
@@ -104,7 +104,7 @@
                 </ul>
               </fieldset>
               <fieldset class="hotel-filter-group">
-                <legend class="hotel-filter-title">Тип Жилья</legend>
+                <legend class="hotel-filter-title">Тип Жилья:</legend>
                 <ul class="hotel-filter-list">
                   <li class="hotel-filter-item">
                     <label class="control" for="hotel">
@@ -136,12 +136,12 @@
                 <legend class="hotel-filter-title">Стоимость, ₽:</legend>
                 <div class="range-wrapper-inputs">
                   <label class="control-range-label" for="range-min">
-                  <input type="number" class="control-input-range" id="range-min" value="0" min="0" max="9000"
-                    name="min-price">
+                    <input type="number" class="control-input-range" id="range-min" value="0" min="0" max="9000"
+                      name="min-price">
                   </label>
                   <label class="control-range-label" for="range-max">
-                  <input type="number" class="control-input-range" id="range-max" value="9000" min="0" max="9000"
-                    name="max-price">
+                    <input type="number" class="control-input-range" id="range-max" value="9000" min="0" max="9000"
+                      name="max-price">
                   </label>
                 </div>
                 <div class="range-scale">
